fixed alignment issue and changed rules navigation to call for paper

--- a/assets/main.css
+++ b/assets/main.css
@@ -50,6 +50,7 @@ body {
     margin: 60px auto;
     width: 1200px;
     overflow-x: hidden;
+    
 }
 
 a {
@@ -196,6 +197,10 @@ td {
 .banner {
     position: relative;
     font-family: 'Playfair Display', serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .top-left {
@@ -231,11 +236,13 @@ td {
     color: purple;
     text-align: center;
     text-shadow: 1px 1px 3px #c0c0c0;
+
 }
 
 .title2 {
     color: #52739e;
     text-align: center;
+
     font-family: 'Playfair Display', serif;
     text-shadow: 1px 1px 3px #c0c0c0;
 }
@@ -298,6 +305,7 @@ li.menu a:hover {
 
 table.sponsors {
     width: 800px;
+    /* margin-left: -50px; */
 }
 
 td.sponsor {
@@ -358,14 +366,16 @@ td.date {
         transform: translate3d(4px, 0, 0);
     }
 }
+
 @keyframes big {
-   0%{
-       transform: scale(1);
-      
-   }
-   100%{
-       transform: scale(1.3);
-   }
+    0% {
+        transform: scale(1);
+
+    }
+
+    100% {
+        transform: scale(1.3);
+    }
 }
 
 
@@ -471,7 +481,6 @@ footer {
 
 .main_container {
     /* width: 80vw; */
-    width: 100%;
     gap: 30px;
 
     display: flex;
